Add more configuration

--- a/src/settings-dialog-electron.html
+++ b/src/settings-dialog-electron.html
@@ -16,5 +16,11 @@
             <input type="text" id='virtualenv_path' />
             <button id='btn_virtualenv_path'>select</button>
         </div>
+            <div>
+                <input id="cb_generate_map_file" type="checkbox" name="Generate map file" />
+                <label for="Generate map file">Generate map file</label>
+                <input id="cb_use_virtualenv" type="checkbox" name="Use virtaulenv" />
+                <label for="Use virtualenv">Use virtualenv</label>
+            </div>
     </body>
 </html>
