--- a/src/view-electron.html
+++ b/src/view-electron.html
@@ -107,7 +107,7 @@
     </button>
     <button id='map-file-button' title='Tint nodes'><!-- onclick="mapper.test('dd')"-->
 
-        <svg viewBox="0 0 100 100" >
+        <svg viewBox="0 0 100 100" class="icon">
             <rect class='border' x='12' y='12' width='76' height='76' rx='16' ry='16' stroke-width='8' stroke='#fff'/>
               <path  class='border'  d="M 48 18 L 75 50 L 30 75 L 15 60 L 48 18 z" stroke-width='8' stroke='#fff'/>
               <path class='border'  d= 'M 28 40 v -25 h 20 v 40' stroke-width='8' stroke='#fff'/>
