Add layer and nodes details sidebar UI

--- a/src/view-electron.html
+++ b/src/view-electron.html
@@ -105,7 +105,7 @@
             <line class='stroke' x1='78' y1='78' x2='82' y2='82' stroke-width='8' stroke-linecap='square' />
         </svg>
     </button>
-    <button id='map-file-button' title='Tint nodes'><!-- onclick="mapper.test('dd')"-->
+    <button id='map-file-button' title='Tint Nodes'><!-- onclick="mapper.test('dd')"-->
 
         <svg viewBox="0 0 100 100" class="icon">
             <rect class='border' x='12' y='12' width='76' height='76' rx='16' ry='16' stroke-width='8' stroke='#fff'/>
@@ -117,6 +117,18 @@
               <path class='stroke'  d= 'M 28 40 v -25 h 20 v 40' stroke-width='4'/>
               <path class='stroke'  d ='M 75 50 v 40 L 85 70 L 85 40 L 60 30 z' stroke-width='4'/>
             </svg>
+    </button>
+        <button id='model-layers-button' title='Model Layers'>
+        <svg viewBox='0 0 100 100' class='icon'>
+            <rect class='border' x='12' y='12' width='76' height='76' rx='16' ry='16' stroke-width='8' />
+            <line class='border' x1='30' y1='37' x2='70' y2='37' stroke-width='8' stroke-linecap='round' stroke='#fff' />
+            <line class='border' x1='30' y1='50' x2='70' y2='50' stroke-width='8' stroke-linecap='round' stroke='#fff' />
+            <line class='border' x1='30' y1='63' x2='70' y2='63' stroke-width='8' stroke-linecap='round' stroke='#fff' />
+            <rect class='stroke' x='12' y='12' width='76' height='76' rx='16' ry='16' stroke-width='4' />
+            <line class='stroke' x1='30' y1='37' x2='70' y2='37' stroke-width='4' stroke-linecap='round' />
+            <line class='stroke' x1='30' y1='50' x2='70' y2='50' stroke-width='4' stroke-linecap='round' />
+            <line class='stroke' x1='30' y1='63' x2='70' y2='63' stroke-width='4' stroke-linecap='round' />
+        </svg>
     </button>
 </div>
 <div id='sidebar' class='sidebar'>
