adjust file open method when use in browser environment

--- a/index.html
+++ b/index.html
@@ -111,6 +111,31 @@
             <line class='stroke' x1='78' y1='78' x2='82' y2='82' stroke-width='8' stroke-linecap='square' />
         </svg>
     </button>
+	    <button id='map-file-button' title='Tint Nodes'><!-- onclick="mapper.test('dd')"-->
+
+        <svg viewBox="0 0 100 100" class="icon">
+            <rect class='border' x='12' y='12' width='76' height='76' rx='16' ry='16' stroke-width='8' stroke='#fff'/>
+              <path  class='border'  d="M 48 18 L 75 50 L 30 75 L 15 60 L 48 18 z" stroke-width='8' stroke='#fff'/>
+              <path class='border'  d= 'M 28 40 v -25 h 20 v 40' stroke-width='8' stroke='#fff'/>
+              <path class='border'  d ='M 75 50 v 40 L 85 70 L 85 40 L 60 30 z' stroke-width='8' stroke='#fff'/>
+            <rect class='stroke' x='12' y='12' width='76' height='76' rx='16' ry='16' stroke-width='4' />
+              <path  class='stroke'  d="M 48 18 L 75 50 L 30 75 L 15 60 L 48 18 z" stroke-width='4'/>
+              <path class='stroke'  d= 'M 28 40 v -25 h 20 v 40' stroke-width='4'/>
+              <path class='stroke'  d ='M 75 50 v 40 L 85 70 L 85 40 L 60 30 z' stroke-width='4'/>
+            </svg>
+    </button>
+        <button id='model-layers-button' title='Model Layers'>
+        <svg viewBox='0 0 100 100' class='icon'>
+            <rect class='border' x='12' y='12' width='76' height='76' rx='16' ry='16' stroke-width='8' />
+            <line class='border' x1='30' y1='37' x2='70' y2='37' stroke-width='8' stroke-linecap='round' stroke='#fff' />
+            <line class='border' x1='30' y1='50' x2='70' y2='50' stroke-width='8' stroke-linecap='round' stroke='#fff' />
+            <line class='border' x1='30' y1='63' x2='70' y2='63' stroke-width='8' stroke-linecap='round' stroke='#fff' />
+            <rect class='stroke' x='12' y='12' width='76' height='76' rx='16' ry='16' stroke-width='4' />
+            <line class='stroke' x1='30' y1='37' x2='70' y2='37' stroke-width='4' stroke-linecap='round' />
+            <line class='stroke' x1='30' y1='50' x2='70' y2='50' stroke-width='4' stroke-linecap='round' />
+            <line class='stroke' x1='30' y1='63' x2='70' y2='63' stroke-width='4' stroke-linecap='round' />
+        </svg>
+    </button>
 </div>
 <div id='sidebar' class='sidebar'>
     <h1 id='sidebar-title' class='sidebar-title'></h1>
@@ -130,6 +155,7 @@
 <script type='text/javascript' src='zip.js'></script>
 <script type='text/javascript' src='gzip.js'></script>
 <script type='text/javascript' src='tar.js'></script>
+<script type='text/javascript' src='mapper.js'></script>
 <script type='text/javascript' src='view-grapher.js'></script>
 <script type='text/javascript' src='view-sidebar.js'></script>
 <script type='text/javascript' src='view.js'></script>
