--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </svg>
     </a>
     <button id='open-file-button' class='center' style='top: 200px; width: 125px; opacity: 0;'>Open Model...</button>
-    <input type='file' id='open-file-dialog' style='display:none' multiple='false' accept='.onnx, .pb, .meta, .tflite, .keras, .h5, .hdf5, .json, .model, .mlmodel, .caffemodel, .pt, .pth, .t7, .pkl, .joblib, .pbtxt, .prototxt, .xml, .dot'>
+    <input type='file' id='open-file-dialog' style='display:none' multiple='false' accept='.onnx, .pb, .meta, .tflite, .keras, .h5, .hdf5, .json, .model, .mlmodel, .caffemodel, .pt, .pth, .t7, .pkl, .joblib, .pbtxt, .prototxt, .xml, .dot, .dlc'>
     <!-- Preload fonts to workaround Chrome SVG layout issue -->
     <div style='font-weight: normal; color: rgba(0, 0, 0, 0.01); user-select: none;'>.</div>
     <div style='font-weight: 600; color: rgba(0, 0, 0, 0.01); user-select: none;'>.</div>
@@ -153,6 +153,7 @@
 <script type='text/javascript' src='pako.min.js'></script>
 <script type='text/javascript' src='base.js'></script>
 <script type='text/javascript' src='zip.js'></script>
+<script type='text/javascript' src='dlc.js'></script>
 <script type='text/javascript' src='gzip.js'></script>
 <script type='text/javascript' src='tar.js'></script>
 <script type='text/javascript' src='mapper.js'></script>
